--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@octokit/rest": "^20.0.2",
     "@octokit/webhooks": "^12.0.10",
     "@sentry/node": "^7.52.1",
+    "@types/pg": "^8.11.0",
     "@vector-im/compound-design-tokens": "^0.1.0",
     "@vector-im/compound-web": "^0.9.4",
     "ajv": "^8.11.0",
@@ -66,6 +67,7 @@
     "mime": "^4.0.1",
     "node-emoji": "^2.1.3",
     "p-queue": "^6.6.2",
+    "pg": "^8.11.3",
     "preact-render-to-string": "^6.3.1",
     "prom-client": "^15.1.0",
     "quickjs-emscripten": "^0.26.0",
