--- a/config.sample.yml
+++ b/config.sample.yml
@@ -35,7 +35,7 @@ listeners:
   - port: 9002
     bindAddress: 0.0.0.0
     resources:
-      - widgets
+      - mqttConnectionManagement
 
 #github:
 #  # (Optional) Configure this to enable GitHub support
@@ -95,13 +95,6 @@ listeners:
 #    client_secret: bar
 #    redirect_uri: https://example.com/bridge_oauth/
 
-#bridgeAuth:
-#  # (Optional) Support for external auth events
-#  enabled: false
-#  enableHttpGet: false
-#  domain: example.com
-#  urlPrefix: https://example.com/bridge_auth/
-
 #generic:
 #  # (Optional) Support for generic webhook events.
 #  #'allowJsTransformationFunctions' will allow users to write short transformation snippets in code, and thus is unsafe in untrusted environments
@@ -112,6 +105,18 @@ listeners:
 #  userIdPrefix: _webhooks_
 #  allowJsTransformationFunctions: false
 #  waitForComplete: false
+
+#bridgeAuth:
+#  # (Optional) Support for external auth events
+#  enabled: false
+#  enableHttpGet: false
+#  domain: example.com
+#  urlPrefix: https://example.com/bridge_auth/
+
+#mqtt:
+#  # (Optional) Support for MQTT connections management API
+#  enabled: false
+#  mqttasAddress: http://mqttas:8585
 
 #feeds:
 #  # (Optional) Configure this to enable RSS/Atom feed support
