--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ajv": "^8.11.0",
     "axios": "^1.6.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "figma-js": "^1.14.0",
     "http-status-codes": "^2.2.0",
