--- a/config.sample.yml
+++ b/config.sample.yml
@@ -131,7 +131,7 @@ listeners:
 
 #bot:
 #  # (Optional) Define profile information for the bot user
-#  displayname: Hookshot Bot
+#  displayname: Bridge Bot
 #  avatar: mxc://half-shot.uk/2876e89ccade4cb615e210c458e2a7a6883fe17d
 
 #serviceBots:
