--- a/helm/hookshot/values.yaml
+++ b/helm/hookshot/values.yaml
@@ -217,7 +217,7 @@ hookshot:
     # bot:
       # (Optional) Define profile information for the bot user
       #
-      # displayname: Hookshot Bot
+      # displayname: Bridge Bot
       # avatar: mxc://half-shot.uk/2876e89ccade4cb615e210c458e2a7a6883fe17d
     # serviceBots:
       # (Optional) Define additional bot users for specific services
